--- a/main2.html
+++ b/main2.html
@@ -22,7 +22,7 @@
             </div>
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="main.html">Login</a></p>
+        <p>Already have an account? <a href="index.html">Login</a></p>
     </div>
 </body>
 </html>
